--- a/QuotesPortlet/src/main/resources/content/random-quote-portlet.properties
+++ b/QuotesPortlet/src/main/resources/content/random-quote-portlet.properties
@@ -3,3 +3,4 @@ javax.portlet.title=Random Quotes
 random_quote-next=Next
 random_quote-save=Save
 random_quote-err-null-value=This his value is required.
+random_quote-generator_error=Could not retrieve quote!
