Added event communication.

--- a/QuotesPortlet/src/main/resources/content/manager-quote-portlet.properties
+++ b/QuotesPortlet/src/main/resources/content/manager-quote-portlet.properties
@@ -2,3 +2,4 @@ javax.portlet.title=Quote Manager
 quote_manager-edit=Edit
 quote_manager-delete=Delete
 quote_manager-add=Add
+manager_quote-empty_list=Database of quotes is empty.
