--- a/QuotesPortlet/src/main/resources/content/random-quote-portlet.properties
+++ b/QuotesPortlet/src/main/resources/content/random-quote-portlet.properties
@@ -4,3 +4,4 @@ random_quote-next=Next
 random_quote-save=Save
 random_quote-err-null-value=This his value is required.
 random_quote-generator_error=Could not retrieve quote!
+random_quote-local_quotes=Show only local quotes from database?
