--- a/QuotesPortlet/src/main/webapp/WEB-INF/web.xml
+++ b/QuotesPortlet/src/main/webapp/WEB-INF/web.xml
@@ -3,8 +3,10 @@
 <web-app version="2.4"
 	xmlns="http://java.sun.com/xml/ns/j2ee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
-    					http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+    xsi:schemaLocation=
+    	"http://java.sun.com/xml/ns/j2ee
+    	 http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+    	 
 	<context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/spring-context/portlet-application-context.xml</param-value>
