--- a/QuotesPortlet/src/main/resources/content/manager-quote-portlet.properties
+++ b/QuotesPortlet/src/main/resources/content/manager-quote-portlet.properties
@@ -1,5 +1,18 @@
 javax.portlet.title=Quote Manager
+
 quote_manager-edit=Edit
 quote_manager-delete=Delete
 quote_manager-add=Add
-manager_quote-empty_list=Database of quotes is empty.
+
+quote_manager-empty_list=Database of quotes is empty.
+
+quote_manager-table_quote=Quote
+quote_manager-table_author=Author
+quote_manager-table_created=Created at
+quote_manager-table_entity_author=User
+quote_manager-table_actions=Actions
+
+quote_manager-form_add=Add
+quote_manager-from_cancel=Cancel
+quote_manager-form_quote=Quote
+quote_manager-from_author=Author
